// Vitest Snapshot v1

exports[`Divider > default divider 1`] = `
<body>
  <div>
    <div
      class="sc-bczRLJ sc-gsnTZi bTcrmt imbBBf"
    />
  </div>
</body>
`;

exports[`Divider > divider with margin extended 1`] = `
<body>
  <div>
    <div
      class="sc-bczRLJ sc-gsnTZi bTcrmt bfvzeG"
    />
  </div>
</body>
`;
